menu item are no longer jumpy

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -405,7 +405,6 @@ footer {
 
 @media screen and (min-width: 751px) {
     .menu-item:hover {
-        font-size: 110%;
         box-shadow: inset 0 -5px 0 rgba(255, 255, 255, 0.4);
     }
 
